--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,5 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/hustlogi/public_html/
-    - /bin/cp -R * $DEPLOYPATH
+    - /bin/cp index.html $DEPLOYPATH
 
