--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,8 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/hustlogi/public_html/
-    - /bin/cp index.html $DEPLOYPATH
-
+    - /bin/cp -R css $DEPLOYPATH
+    - /bin/cp -R js $DEPLOYPATH
+    - /bin/cp -R image $DEPLOYPATH
+    - /bin/cp *.html $DEPLOYPATH
+    - /bin/cp CNAME $DEPLOYPATH
